--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-responsive": "^10.0.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
